--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ a:hover {
     opacity: 1;
 }
 
-.hambuger-icon span:first-child {
+.hamburger-icon span:first-child {
     transform: none;
 }
 
